--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
     }
   </script>
   <style>
+    body {
+      background-color: #000000;
+    }
+
     .hide-scrollbar::-webkit-scrollbar {
       display: none;
     }
@@ -57,7 +61,7 @@
   }
 }
 </script>
-
+  <script src="https://unpkg.com/lenis@1.3.17/dist/lenis.min.js"></script>
 </head>
 
 <body>
